[project]
name = "code-reward-modeling"
version = "0.1.0"
description = "Reward modeling for code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets",
    "vllm",
    "torch",
    "transformers",
    "modal>=0.73.134",
    "e2b-code-interpreter>=1.2.0",
    "python-dotenv>=1.1.0",
]
